유저 방 설정기능, 층별 방 조회기능 추가.
